get list of clients with additional querys + new swagger
