# src/routes/client.route.js
@@ -6,7 +6,7 @@ const JWTAdminMiddleware = require('../middlewares/JWTAdminMiddleware')
 const getClientMiddleware = require('../middlewares/getClientMiddleware')
 
 router.post('/', upload.single('file'), ClientController.createClient)
-// router.get('/', JWTAdminMiddleware, ClientController.getClientsList)
+router.get('/', JWTAdminMiddleware, ClientController.getClientsList)
 router.get('/:clientId', getClientMiddleware, ClientController.getClientInfo)
 router.patch('/:clientId', upload.single('file'), JWTAdminMiddleware, ClientController.updateClient)
 router.delete('/:clientId', JWTAdminMiddleware, ClientController.deleteClient)
